Preparing test deployment

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,58 +1,48 @@
 <section class="ae-container-fluid rk-main">
     <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
-      <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4"><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-1.jpg" alt="">
+      <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+        <a routerLink="/accelerometer" class="rk-item ae-masonry__item">
+          <img src="assets/img/accelerometer.png" alt="">
           <div class="item-meta">
-            <h2>Essential Stationery</h2>
-            <p>Branding</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-2.jpg" alt="">
+            <h2>Acelerómetro</h2>
+            <p>Comprueba la inclinación</p>
+          </div>
+        </a>
+        <a routerLink="/magnetometer" class="rk-item ae-masonry__item">
+          <img src="assets/img/magnetometer.png" alt="">
           <div class="item-meta">
-            <h2>Pickled Tousled</h2>
-            <p>Art Direction</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-3.jpg" alt="">
+            <h2>Magnetómetro</h2>
+            <p>Hacia donde mira</p>
+          </div>
+        </a>
+        <a routerLink="/rotation" class="rk-item ae-masonry__item">
+          <img src="assets/img/rotation.png" alt="">
           <div class="item-meta">
-            <h2>Waistcoat vegan</h2>
-            <p>Graphic Design</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-4.jpg" alt="">
+            <h2>Rotación</h2>
+            <p>Ayuda a determinar inclinación</p>
+          </div>
+        </a>
+        <a routerLink="/gyroscope" class="rk-item ae-masonry__item">
+          <img src="assets/img/gyroscope.png" alt="">
           <div class="item-meta">
-            <h2>Tumblr hammock</h2>
-            <p>Packaging</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-5.jpg" alt="">
+            <h2>Giroscopio</h2>
+            <p>Aceleración y movimiento</p>
+          </div>
+        </a>
+        <a routerLink="/light" class="rk-item ae-masonry__item">
+          <img src="assets/img/light.png" alt="">
           <div class="item-meta">
-            <h2>Biodiesel etsy</h2>
-            <p>Branding</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-6.jpg" alt="">
+            <h2>Luminosidad</h2>
+            <p>Luz ambiental</p>
+          </div>
+        </a>
+        <a routerLink="/battery" class="rk-item ae-masonry__item">
+          <img src="assets/img/battery.png" alt="">
           <div class="item-meta">
-            <h2>Gentrify artisan</h2>
-            <p>Graphic Design</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-7.jpg" alt="">
-          <div class="item-meta">
-            <h2>Plaid austin</h2>
-            <p>Graphic Design</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-8.jpg" alt="">
-          <div class="item-meta">
-            <h2>Trust fund</h2>
-            <p>Packaging</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-9.jpg" alt="">
-          <div class="item-meta">
-            <h2>Gentrify pork</h2>
-            <p>Branding</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-10.jpg" alt="">
-          <div class="item-meta">
-            <h2>Waistcoat ugh</h2>
-            <p>UI/UX</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-11.jpg" alt="">
-          <div class="item-meta">
-            <h2>Deep v kogi</h2>
-            <p>Graphic Design</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-12.jpg" alt="">
-          <div class="item-meta">
-            <h2>Venmo trust</h2>
-            <p>Packaging</p>
-          </div></a><a href="portfolio-item.html" class="rk-item ae-masonry__item"><img src="assets/img/project-13.jpg" alt="">
-          <div class="item-meta">
-            <h2>Venmo trust</h2>
-            <p>Ui/UX</p>
-          </div></a>
+            <h2>Batería</h2>
+            <p>Consumo y salud</p>
+          </div>
+        </a>
       </div>
     </section>
   </section>
