--- a/src/app/pages/accelerometer/accelerometer.component.css
+++ b/src/app/pages/accelerometer/accelerometer.component.css
@@ -1,9 +1,8 @@
 .chart-container {
+    display: block;
     width: 1024px;
     height: 500px;
-    border: 3px solid #aea;
-    margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 15px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
 }
