--- a/src/assets/css/urku.css
+++ b/src/assets/css/urku.css
@@ -53,7 +53,8 @@ body {
 }
 
 .rk-header {
-  background-color: #fff;
+  background: -moz-linear-gradient(-45deg, rgba(24,13,42,1) 0%, rgba(74,49,112,1) 59%, rgba(74,49,112,1) 100%);
+  color: white;
   position: relative;
   z-index: 5;
 }
@@ -77,7 +78,7 @@ body {
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-bottom: 3.3rem;
+  padding-bottom: 2.8rem;
   padding-top: 2.8rem;
 }
 @media (min-width: 64em) {
@@ -1958,7 +1959,7 @@ body {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  font-size: .875rem;
+  font-size: 1rem;
   font-weight: 700;
   letter-spacing: .5px;
   list-style: none;
@@ -1967,10 +1968,10 @@ body {
   padding-top: .16rem;
 }
 .rk-menu__item {
-  color: #202020;
+  color: #171618;
   display: inherit;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .rk-menu__item:first-child {
   padding-left: 0;
@@ -1979,7 +1980,7 @@ body {
   padding-right: 0;
 }
 .rk-menu__item.active {
-  color: #a0a0a0;
+  color: #ede7e7;
 }
 .rk-menu__link {
   padding-bottom: 4.2rem;
