Chart web version 2.0

--- a/src/app/pages/battery/battery.component.html
+++ b/src/app/pages/battery/battery.component.html
@@ -1,4 +1,7 @@
-<a href="" class="button">HUAWEI JSN-L21</a>
-<a href="" class="button">HUAWEI POT-LX1</a>
-
 <div class="chart-container" #chartContainer></div>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
+<div id="button_device" align="center">
+    <a href="" class="button" >HUAWEI JSN-L21</a>
+    <a href="" class="button">HUAWEI POT-LX1</a>
+</div>
