--- a/src/app/pages/rotation/rotation.component.html
+++ b/src/app/pages/rotation/rotation.component.html
@@ -1,4 +1,5 @@
-<a href="" class="button">HUAWEI JSN-L21</a>
-<a href="" class="button">HUAWEI POT-LX1</a>
-
 <div class="chart-container" #chartContainer></div>
+<div align="center">
+    <a href="" class="button">HUAWEI JSN-L21</a>
+    <a href="" class="button">HUAWEI POT-LX1</a>
+</div>
