--- a/src/app/pages/battery/battery.component.html
+++ b/src/app/pages/battery/battery.component.html
@@ -1,7 +1,9 @@
 <div class="chart-container" #chartContainer></div>
 <br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br>
-<div id="button_device" align="center">
-    <a href="" class="button" >HUAWEI JSN-L21</a>
-    <a href="" class="button">HUAWEI POT-LX1</a>
+<div align="center">
+    <button class="button" (click)='ngChangeToJSN()'>HUAWEI JSN-L21</button>
+    <button class="button" (click)='ngChangeToPOT()'>HUAWEI POT-LX1</button>
 </div>
+
+
