--- a/src/app/pages/rotation/rotation.component.html
+++ b/src/app/pages/rotation/rotation.component.html
@@ -1,5 +1,5 @@
 <div class="chart-container" #chartContainer></div>
 <div align="center">
-    <a href="" class="button">HUAWEI JSN-L21</a>
-    <a href="" class="button">HUAWEI POT-LX1</a>
+    <button class="button" (click)='ngChangeToJSN()'>HUAWEI JSN-L21</button>
+    <button class="button" (click)='ngChangeToPOT()'>HUAWEI POT-LX1</button>
 </div>
